# cli-simple-base64

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  CMakeLists.txt  CMakePresets.json  DETAIL.md  README.md  SECURITY.md  conanfile.py
.github/workflows/: cmake-multi-platform.yml
task/: ExposeLetter.md  FinishTests.md  SecurityAudit.md  SupportCPack.md
task/CSB64_LOGIC/: Reduce_size_of_CSB64_logic_library.md
task/ProjectRoot/: Support_CPack.md
task/QualityAssurance/: Finish_tests.md  Improve_docs.md
task/SB64/: Make_repo_for_SB64.md
tasks/: ImproveDocs.md
util/task/: package.cmake  setup_deps.cmake
